changed gitignore and yarn lock

--- a/client/app.json
+++ b/client/app.json
@@ -1,28 +1,40 @@
 {
-  "expo": {
-    "name": "client",
-    "slug": "client",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "web": {
-      "favicon": "./assets/images/favicon.png"
-    }
-  }
+	"expo": {
+		"name": "gobz-frontend",
+		"slug": "gobz-frontend",
+		"version": "1.0.0",
+		"orientation": "portrait",
+		"icon": "./assets/images/icon.png",
+		"scheme": "myapp",
+		"userInterfaceStyle": "automatic",
+		"splash": {
+			"image": "./assets/images/splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#ffffff"
+		},
+		"updates": {
+			"fallbackToCacheTimeout": 0
+		},
+		"assetBundlePatterns": ["**/*"],
+		"android": {
+			"package": "ca.go.bz",
+			"config": {
+				"googleMaps": {
+					"apiKey": "AIzaSyAYnD1sOfEKnb9_cfm0ilNtdvb5KXFm-ik"
+				}
+			}
+		},
+		"ios": {
+			"supportsTablet": true,
+			"config": {
+				"googleMapsApiKey": "AIzaSyAhgFCLb-2n5489Y2CjFVlKeSwEFnU7KoQ"
+			}
+		},
+		"web": {
+			"favicon": "./assets/images/favicon.png",
+			"config": {
+				"googleMapsApiKey": "AIzaSyAhgFCLb-2n5489Y2CjFVlKeSwEFnU7KoQ"
+			}
+		}
+	}
 }
