--- a/client/package.json
+++ b/client/package.json
@@ -13,25 +13,53 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@freakycoder/react-native-text-area": "^0.0.12",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/core": "^3.0.0",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
+    "expo-av": "~8.2.1",
+    "expo-blur": "~8.1.2",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-linear-gradient": "~8.2.1",
     "expo-linking": "^1.0.1",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.2",
     "expo-web-browser": "~8.3.1",
+    "lodash.filter": "^4.6.0",
+    "prop-types": "^15.7.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-google-autocomplete": "^0.1.9",
+    "react-native-google-places-autocomplete": "^1.8.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "https://github.com/expo/react-native-maps.git",
+    "react-native-modal": "^11.5.6",
+    "react-native-paper": "^4.0.1",
+    "react-native-parallax-scroll-view": "^0.21.3",
+    "react-native-ratings": "^7.2.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-redash": "^14.2.3",
+    "react-native-review-modal": "^0.0.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-simple-survey": "^3.1.2",
+    "react-native-snap-carousel": "^4.0.0-beta.5",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-svg": "12.1.0",
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.0.10",
+    "react-navigation-hooks": "^1.0.3",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
